# aptove

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Containerfile.apple  Dockerfile  README.md  dist-workspace.toml  index.html  styles.css
.github/workflows/: ci.yml  release.yml
agent-cli/: Cargo.toml  README.md
agent-cli/src/: dispatch.rs  main.rs  runtime.rs  state.rs  transport_lifecycle.rs
agent-cli/src/commands/: chat.rs  config.rs  jobs.rs  mod.rs  triggers.rs  workspace.rs
agent-cli/src/handlers/: jobs.rs  mod.rs  session.rs  triggers.rs
agent-core/: Cargo.toml  README.md
agent-core/src/: agent_loop.rs  bindings.rs  builder.rs  config.rs  context.rs  lib.rs  persistence.rs  plugin.rs  provider.rs  retry.rs  scheduler.rs  session.rs  system_prompt.rs  transport.rs  trigger.rs  types.rs  workspace.rs
agent-core/src/services/: job_service.rs  mod.rs  session_service.rs  trigger_service.rs
agent-mcp-bridge/: Cargo.toml
agent-mcp-bridge/src/: lib.rs
agent-provider-claude/src/: lib.rs
agent-provider-gemini/: Cargo.toml
agent-provider-openai/: Cargo.toml
agent-storage-fs/src/: binding_store.rs  session_store.rs
agent-tui/: Cargo.toml
agent-tui/src/: app.rs  lib.rs
agent-tui/src/services/: bridge.rs  cloudflare.rs  mod.rs  tailscale.rs
agent-tui/src/tabs/: chat.rs  connect.rs  jobs.rs  mod.rs  setup.rs
agent-tui/src/widgets/: mod.rs  qr.rs  status_bar.rs
docs/: acp-support.md  plugins.md  run-mode.md  serve-mode.md  session.md  workspace.md
npm/aptove/: package.json  postinstall.js  test-postinstall.js
npm/aptove-darwin-arm64/: README.md  package.json
npm/aptove-darwin-x64/: README.md  package.json
npm/aptove-linux-arm64/: README.md  package.json
npm/aptove-linux-x64/: README.md  package.json
npm/aptove-win32-x64/: README.md  package.json
plugins/agent-bridge/: Cargo.toml
plugins/agent-bridge/src/: config.rs  lib.rs  server.rs
plugins/agent-mcp-bridge/: README.md
plugins/agent-mcp-bridge/src/: lib.rs
plugins/agent-plugin-diff/: Cargo.toml
plugins/agent-plugin-diff/src/: lib.rs
plugins/agent-plugin-git/: Cargo.toml
plugins/agent-plugin-git/src/: lib.rs
plugins/agent-provider-claude/: Cargo.toml  README.md
plugins/agent-provider-claude/src/: lib.rs
plugins/agent-provider-claude/tests/: integration_test.rs
plugins/agent-provider-gemini/: Cargo.toml  README.md
plugins/agent-provider-gemini/src/: lib.rs
plugins/agent-provider-gemini/tests/: integration_test.rs
plugins/agent-provider-openai/: Cargo.toml  README.md
plugins/agent-provider-openai/src/: lib.rs
plugins/agent-provider-openai/tests/: integration_test.rs
plugins/agent-scheduler/: Cargo.toml
plugins/agent-scheduler/src/: lib.rs
plugins/agent-storage-fs/: Cargo.toml
plugins/agent-storage-fs/src/: lib.rs  scheduler_store.rs  session_store.rs  trigger_store.rs  workspace_store.rs
