[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for the Aptove ACP agent"

[[bin]]
name = "aptove"
path = "src/main.rs"

[dependencies]
agent-core.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
dirs.workspace = true
toml.workspace = true
