[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI binary for the Aptove ACP agent"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "aptove"
path = "src/main.rs"

[dependencies]
agent-core.workspace = true
agent-client-protocol-schema.workspace = true
agent-storage-fs.workspace = true
agent-scheduler.workspace = true
agent-provider-claude.workspace = true
agent-provider-gemini.workspace = true
agent-provider-openai.workspace = true
agent-mcp-bridge.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
dirs.workspace = true
toml.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
which.workspace = true
uuid.workspace = true
agent-bridge.workspace = true
