[package]
name = "agent-mcp-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP client bridge for the Aptove agent — connects to external MCP servers for tool use"

[dependencies]
agent-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
