[package]
name = "agent-provider-claude"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Anthropic Claude LLM provider for the Aptove agent"

[dependencies]
agent-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
