[package]
name = "agent-provider-gemini"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Google Gemini LLM provider for the Aptove agent"

[dependencies]
agent-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
