[package]
name = "agent-storage-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Filesystem storage backend for the Aptove agent — workspaces, sessions, and bindings"

[dependencies]
agent-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
